# P-OLA-Framework

./: .gitignore  .gitmodules  CMakeLists.txt
CppDic/: CMakeLists.txt
CppDic/lib/include/cppdic/: ServiceProvider.hpp  ServiceProviderBuilder.hpp
CppDic/lib/include/cppdic/utils/: CanConstructTypeFromAtLeastOneTuplePrefixSubset.hpp
cmake/: windows_cuda.cmake
src/: OLA_Agent.cpp  OLA_Agent.hpp  ThermalModel.cpp  ThermalModel.hpp  main.cpp
src/DependencyInjectionTest/: AMessageReceiver.cpp  AMessageReceiver.hpp  AMessageSender.cpp  AMessageSender.hpp  IMessageReceiverInterface.hpp  IMessageSenderInterface.hpp  MockedMessageReceiver.cpp  MockedMessageReceiver.hpp  MockedMessageSender.cpp  MockedMessageSender.hpp  SimpleMessageReceiver.cpp  SimpleMessageReceiver.hpp  SimpleMessageSender.cpp  SimpleMessageSender.hpp
src/clock/: IClock.hpp  SimulationClock.cpp  SimulationClock.hpp
src/consumptionService/: ConsumptionService.cpp  ConsumptionService.hpp  IConsumptionService.hpp
src/inputService/: AInputService.hpp  DataTypes.hpp  EnergyPriceService.cpp  EnergyPriceService.hpp  GPSService.cpp  GPSService.hpp  IInputService.hpp  UserPreferenceService.cpp  UserPreferenceService.hpp  WeatherService.cpp  WeatherService.hpp  dataTypes.hpp
src/temperatureFactor/: ATemperatureFactor.cpp  ATemperatureFactor.hpp  Heater.cpp  Heater.hpp  ITemperatureFactor.hpp  Wall.cpp  Wall.hpp  Window.cpp  Window.hpp
utils/: setup_libtorch.ps1  setup_libtorch.sh
